--- a/web/src/app/components/register/register.component.html
+++ b/web/src/app/components/register/register.component.html
@@ -11,8 +11,12 @@
         </div>
         <div class="login">
             <div class="form-container">
-                <h1 style="width: 50%; margin: auto; text-align: center;">BIENVENIDO</h1>
+                <h1 style="width: 50%; margin: auto; text-align: center;">REGISTRO</h1>
                 <form class="form">
+                    <div class="mb-3">
+                        <label for="">Nombre</label>
+                        <input type="text" name="name" id="name" class="form-control">
+                    </div>
                     <div class="mb-3">
                         <label for="">Correo</label>
                         <input type="email" name="email" id="email" class="form-control">
@@ -21,11 +25,17 @@
                         <label for="">Contraseña</label>
                         <input type="password" name="password" id="password" class="form-control">
                     </div>
+                    <div class="mb-3">
+                        <label for="">Confirmar contraseña</label>
+                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control">
+                    </div>
 
-                    <button type="submit" class="btn">INICIAR SESIÓN</button>
-                    <p>No tienes cuenta? <a routerLink="/register">Registrate</a></p>
+                    <button type="submit" class="btn">INGRESAR</button>
+                    <p>¿Ya tienes cuenta? <a routerLink="/">Inicia sesión</a></p>
                 </form>
             </div>
         </div>
     </body>
 </html>
+
+<router-outlet></router-outlet>
