--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -12,14 +12,14 @@
         <div class="login">
             <div class="form-container">
                 <h1 style="width: 50%; margin: auto; text-align: center;">BIENVENIDO</h1>
-                <form class="form">
+                <form class="form" (submit)="onSubmit($event)">
                     <div class="mb-3">
                         <label for="">Correo</label>
-                        <input type="email" name="email" id="email" class="form-control">
+                        <input type="email" [(ngModel)]="login.email" name="email" id="email" class="form-control">
                     </div>
                     <div class="mb-3">
                         <label for="">Contraseña</label>
-                        <input type="password" name="password" id="password" class="form-control">
+                        <input type="password" [(ngModel)]="login.password" name="password" id="password" class="form-control">
                     </div>
 
                     <button type="submit" class="btn">INICIAR SESIÓN</button>
