--- a/web/src/app/components/register/register.component.html
+++ b/web/src/app/components/register/register.component.html
@@ -12,22 +12,22 @@
         <div class="login">
             <div class="form-container">
                 <h1 style="width: 50%; margin: auto; text-align: center;">REGISTRO</h1>
-                <form class="form">
+                <form class="form" (submit)="onSubmit($event)">
                     <div class="mb-3">
                         <label for="">Nombre</label>
-                        <input type="text" name="name" id="name" class="form-control">
+                        <input type="text" name="name" [(ngModel)]="register.name" id="name" class="form-control">
                     </div>
                     <div class="mb-3">
                         <label for="">Correo</label>
-                        <input type="email" name="email" id="email" class="form-control">
+                        <input type="email" name="email" [(ngModel)]="register.email" id="email" class="form-control">
                     </div>
                     <div class="mb-3">
                         <label for="">Contraseña</label>
-                        <input type="password" name="password" id="password" class="form-control">
+                        <input type="password" name="password" [(ngModel)]="register.password" id="password" class="form-control">
                     </div>
                     <div class="mb-3">
                         <label for="">Confirmar contraseña</label>
-                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control">
+                        <input type="password" name="password_confirmation" [(ngModel)]="register.password_confirmation" id="password_confirmation" class="form-control">
                     </div>
 
                     <button type="submit" class="btn">INGRESAR</button>
