Serivicio para datos de usuario, correción en la respuesta del register

--- a/web/src/app/components/dashboard/dashboard.component.html
+++ b/web/src/app/components/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <app-navbar></app-navbar>
         <div class="contenedor">
             <div class="usuario">
-
+                <h1 class="username">Bienvenido Hola</h1>
             </div>
         </div>
 </body>
