--- a/web/src/app/components/dashboard/dashboard.component.css
+++ b/web/src/app/components/dashboard/dashboard.component.css
@@ -1,12 +1,54 @@
+body {
+    background-color: #233562;
+    color: white;
+}
+
 .contenedor {
     width: 80%;
     height: 100vh;
-    background-color: wheat;
+    /* background-color: wheat; */
     margin: auto;
 }
 
 .usuario {
     width: 100%;
     height: 25%;
-    background-color: white;
+    /* background-color: white; */
+}
+
+.datosJugador{
+    display: flex;
+    justify-content: space-between;
+    border: solid black 1px;
+    border-radius: 20px;
+    background-color: #343a64;
+}
+
+.datosJugador div {
+    padding: 25px;
+}
+
+.nivel {
+    width: 33%;
+    text-align: center;
+    border-right: solid black 1px;
+}
+.experiencia {
+    width: 33%;
+    text-align: center;
+    border-right: solid black 1px;
+}
+.puntuacion {
+    width: 33%;
+    text-align: center;
+}
+
+.misiones{
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    border: solid black 1px;
+    border-radius: 20px;
+    background-color: #343a64;
+    margin-bottom: 15px;
 }
