--- a/web/src/app/components/registrar-jugador/registrar-jugador.component.html
+++ b/web/src/app/components/registrar-jugador/registrar-jugador.component.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <!-- <title>Document</title> -->
     </head>
     <body class="background-gradient">
         <div class="header">
@@ -12,14 +12,14 @@
         <div class="login">
             <div class="form-container">
                 <h1 style="width: 50%; margin: auto; text-align: center;">BIENVENIDO</h1>
-                <form class="form" (submit)="onSubmit($event)">
+                <form class="form" >
                     <div class="mb-3">
                         <label for="">Correo</label>
-                        <input type="email" [(ngModel)]="login.email" name="email" id="email" class="form-control">
+                        <input type="email"  name="email" id="email" class="form-control">
                     </div>
                     <div class="mb-3">
                         <label for="">Contraseña</label>
-                        <input type="password" [(ngModel)]="login.password" name="password" id="password" class="form-control">
+                        <input type="password"  name="password" id="password" class="form-control">
                     </div>
 
                     <button type="submit" class="btn">INICIAR SESIÓN</button>
