--- a/web/src/app/components/verficar-login/verficar-login.component.css
+++ b/web/src/app/components/verficar-login/verficar-login.component.css
@@ -26,6 +26,8 @@ body {
     height: 50%;
     margin: auto;
     padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 2px 0 0 rgba(0, 0, 0, 0.2);
 }
 .text {
     width: 50%;
