--- a/web/src/app/components/verficar-login/verficar-login.component.html
+++ b/web/src/app/components/verficar-login/verficar-login.component.html
@@ -17,7 +17,7 @@
                 <h4>Introducelo para verificar que eres tu</h4>
             </div>
             <form (submit)="onSubmit(codigo.value)">
-                <input type="number" placeholder="Ingrese el codigo: ######" name="codigo" id="codigo" class="form-control" #codigo>
+                <input type="text" placeholder="Ingrese el codigo: ######" name="codigo" id="codigo" class="form-control" #codigo>
                 <button  class="btn">Verificar</button>
             </form>
         </div>
