--- a/web/src/app/components/register/register.component.html
+++ b/web/src/app/components/register/register.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="login">
             <div class="form-container">
-                <h1 style="width: 50%; margin: auto; text-align: center;">REGISTRO</h1>
+                <h1 style="width: 50%; margin: auto; text-align: center; margin-top: 0px; margin-bottom: 0px;">REGISTRO</h1>
                 <form class="form" (submit)="onSubmit($event)">
                     <div class="mb-3">
                         <label for="">Nombre</label>
@@ -28,6 +28,11 @@
                     <div class="mb-3">
                         <label for="">Confirmar contraseña</label>
                         <input type="password" name="password_confirmation" [(ngModel)]="register.password_confirmation" id="password_confirmation" class="form-control">
+                    </div>
+                    <h3>Datos de perfil</h3>
+                    <div class="mb-3">
+                        <label for="">Nombre de usuario</label>
+                        <input type="text" name="username" [(ngModel)]="register.password_confirmation" id="username" class="form-control">
                     </div>
 
                     <button type="submit" class="btn">INGRESAR</button>
