--- a/web/src/app/components/registrar-jugador/registrar-jugador.component.css
+++ b/web/src/app/components/registrar-jugador/registrar-jugador.component.css
@@ -1,43 +1,53 @@
-.background-gradient{
+body {
+    width: 100%;
+    height: 100vh;
     background-image: linear-gradient(#104bec,#ddb1ff, #e25bff);
 }
 
-.header{
-    width: 10%;
-    margin: auto;
-    height: 150px;
-    border-radius: 50%;
-    background-image: url(../../images/icono-llama.png);
-    background-size: cover;
-    background-position: center;
-}
-
-.login{
+.super-contenedor{
     width: 100%;
-    height: 75vh;
-    background-color: white;
-    border-radius: 50% 50% 0 0 /70% 70% 0 0 ;
-    margin: auto;
-}
-
-.form-container{
-    width: 100%;
-    margin: auto;
     height: 80%;
-    border-radius: 5px;
-    padding: 15px;
     display: flex;
     flex-direction: column;
 }
 
-.form {
-    width: 50%;
-    height: 50%;
+.llama{
+    width: 10%;
+    height: 150px;
+    border-radius: 50%;
     margin: auto;
-    align-self: center;
+    background-image: url('../../images/icono-llama.png');
+    background-size: contain;
 }
 
+.contenedor {
+    width: 50%;
+    background-color: white;
+    height: 50%;
+    margin: auto;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 2px 0 0 rgba(0, 0, 0, 0.2);
+}
+.text {
+    width: 50%;
+    margin: auto;
+    text-align: center;
+}
+
+.form-control {
+    width: 50%;
+    margin-top: 10px;
+    margin: auto;
+}
 .btn{
     background-image: linear-gradient(to right, #e5f0b8, #ddb1ff, #e25bff);
-    width: 100%;
+    width: 50%;
+    margin-top: 10px;
+    margin-left:  25%;
+    margin-right: 25%;
+}
+
+h1{
+    text-align: center;
 }
