--- a/web/src/app/components/registrar-jugador/registrar-jugador.component.html
+++ b/web/src/app/components/registrar-jugador/registrar-jugador.component.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <title>Document</title> -->
-    </head>
-    <body class="background-gradient">
-        <div class="header">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
-        </div>
-        <div class="login">
-            <div class="form-container">
-                <h1 style="width: 50%; margin: auto; text-align: center;">BIENVENIDO</h1>
-                <form class="form" >
-                    <div class="mb-3">
-                        <label for="">Correo</label>
-                        <input type="email"  name="email" id="email" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label for="">Contraseña</label>
-                        <input type="password"  name="password" id="password" class="form-control">
-                    </div>
-
-                    <button type="submit" class="btn">INICIAR SESIÓN</button>
-                    <p>No tienes cuenta? <a routerLink="/registrar">Registrate</a></p>
-                </form>
+    <div class="super-contenedor">
+        <div class="llama"></div>
+    
+        <div class="contenedor">
+            <div class="text">
+                <h1>Favor de ingresar tu nombre de usuario</h1>
             </div>
+            <form (submit)="onSubmit()">
+                <input type="text" placeholder="Nombre de usuario" [(ngModel)]="nombre" name="codigo" id="codigo" class="form-control" >
+                <button  class="btn">Registrar</button>
+            </form>
         </div>
-    </body>
+    </div>
+
+</body>
 </html>
