--- a/web/src/app/components/register/register.component.html
+++ b/web/src/app/components/register/register.component.html
@@ -29,13 +29,13 @@
                         <label for="">Confirmar contraseña</label>
                         <input type="password" name="password_confirmation" [(ngModel)]="register.password_confirmation" id="password_confirmation" class="form-control">
                     </div>
-                    <h3>Datos de perfil</h3>
+                    <!-- <h3>Datos de perfil</h3>
                     <div class="mb-3">
                         <label for="">Nombre de usuario</label>
                         <input type="text" name="username" [(ngModel)]="register.password_confirmation" id="username" class="form-control">
-                    </div>
+                    </div> -->
 
-                    <button type="submit" class="btn">INGRESAR</button>
+                    <button type="submit" class="btn">REGISTRARSE</button>
                     <p>¿Ya tienes cuenta? <a routerLink="/">Inicia sesión</a></p>
                 </form>
             </div>
