Validación de errores y así

--- a/web/src/app/components/verficar-login/verficar-login.component.html
+++ b/web/src/app/components/verficar-login/verficar-login.component.html
@@ -18,6 +18,9 @@
             </div>
             <form (submit)="onSubmit(codigo.value)">
                 <input type="text" placeholder="Ingrese el codigo: ######" name="codigo" id="codigo" class="form-control" #codigo>
+                <div class="alert alert-warning" *ngIf="message">
+                    {{ message }}
+                </div>
                 <button  class="btn">Verificar</button>
             </form>
         </div>
