--- a/web/src/app/components/register/register.component.html
+++ b/web/src/app/components/register/register.component.html
@@ -15,26 +15,32 @@
                 <form class="form" (submit)="onSubmit($event)">
                     <div class="mb-3">
                         <label for="">Nombre</label>
-                        <input type="text" name="name" [(ngModel)]="register.name" id="name" class="form-control">
+                        <input type="text" name="name" [(ngModel)]="register.name" id="name" [ngClass]="{'is-invalid': isNameError, 'form-control': true}">
+                        <div *ngIf="nameError">
+                            <span class="text-danger" *ngFor="let error of nameError">{{error}}</span>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="">Correo</label>
-                        <input type="email" name="email" [(ngModel)]="register.email" id="email" class="form-control">
+                        <input type="email" name="email" [(ngModel)]="register.email" id="email" [ngClass]="{'is-invalid': isEmailError, 'form-control': true}">
+                        <div *ngIf="emailError">
+                            <span class="text-danger" *ngFor="let error of emailError">{{error}}</span>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="">Contraseña</label>
-                        <input type="password" name="password" [(ngModel)]="register.password" id="password" class="form-control">
+                        <input type="password" name="password" [(ngModel)]="register.password" id="password" [ngClass]="{'is-invalid': isPasswordError, 'form-control': true}" class="form-control">
+                        <div *ngIf="passwordError">
+                            <span class="text-danger" *ngFor="let error of passwordError">{{error}} <br></span>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="">Confirmar contraseña</label>
                         <input type="password" name="password_confirmation" [(ngModel)]="register.password_confirmation" id="password_confirmation" class="form-control">
+                        <div *ngIf="passwordError">
+                            <span class="text-danger" *ngFor="let error of passwordError">{{error}} <br></span>
+                        </div>
                     </div>
-                    <!-- <h3>Datos de perfil</h3>
-                    <div class="mb-3">
-                        <label for="">Nombre de usuario</label>
-                        <input type="text" name="username" [(ngModel)]="register.password_confirmation" id="username" class="form-control">
-                    </div> -->
-
                     <button type="submit" class="btn">REGISTRARSE</button>
                     <p>¿Ya tienes cuenta? <a routerLink="/">Inicia sesión</a></p>
                 </form>
