--- a/web/src/app/components/view-misiones/view-misiones.component.html
+++ b/web/src/app/components/view-misiones/view-misiones.component.html
@@ -1,19 +1,11 @@
 <app-navbar></app-navbar>
 
-<div class="container-fluid">
-    <div class="row">
-      <div class="col-12">
-      <br>
-      </div>
-      <button class="btn btn-success btn-block">Crear Misión</button>
-      <br>
-    </div>
-  </div>
-  
-  <br>
 
 <div class="jugadorDiv">
     
+    <div class="contenedorBoton">
+        <button class="btn btn-success btn-block mb-3 mt-2">Crear Misión</button>
+    </div>
     <div class="contenedor" >
         <br>
         <div class="nombre">Recupera los datos</div>
