--- a/web/src/app/components/view-usuarios/view-usuarios.component.html
+++ b/web/src/app/components/view-usuarios/view-usuarios.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <div class="jugadorDiv">
-    <div class="contenedor" >
+    <div class="contenedor mt-2" >
         <div class="nombre">Jugador 1</div>
         <div class="nivel">1</div>
         <div class="experiencia">100</div>
