--- a/web/src/app/components/verficar-login/verficar-login.component.html
+++ b/web/src/app/components/verficar-login/verficar-login.component.html
@@ -18,7 +18,7 @@
             </div>
             <form (submit)="onSubmit(codigo.value)">
                 <input type="text" placeholder="Ingrese el codigo: ######" name="codigo" id="codigo" class="form-control" #codigo>
-                <div class="alert alert-warning" *ngIf="message">
+                <div class="alert alert-warning mt-2" *ngIf="message" style="width: 50%; margin: auto;">
                     {{ message }}
                 </div>
                 <button  class="btn">Verificar</button>
