--- a/web/src/app/components/dashboard/dashboard.component.css
+++ b/web/src/app/components/dashboard/dashboard.component.css
@@ -5,7 +5,6 @@ body {
 
 .contenedor {
     width: 80%;
-    height: 100vh;
     /* background-color: wheat; */
     margin: auto;
 }
@@ -43,6 +42,19 @@ body {
     text-align: center;
 }
 
+.encabezado {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contenedor-link {
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+}
+
 .misiones{
     width: 100%;
     height: auto;
@@ -51,4 +63,38 @@ body {
     border-radius: 20px;
     background-color: #343a64;
     margin-bottom: 15px;
+}
+.heroes{
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    border: solid black 1px;
+    border-radius: 20px;
+    background-color: #343a64;
+    margin-bottom: 15px;
+}
+.amigos {
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    border: solid black 1px;
+    border-radius: 20px;
+    background-color: #343a64;
+    margin-bottom: 15px;
+}
+
+.heroes p {
+    margin: 0;
+}
+
+.amigos-guest{
+    background-color: white;
+    padding: 15px;
+    border-radius: 15px;
+    border: 1px solid black;
+    margin-bottom: 2px;
+}
+
+.amigos-guest h4 {
+    color: black;
 }
