Un pequeño margen a la alerta xdddd

--- a/web/src/app/components/view-usuarios/view-usuarios.component.html
+++ b/web/src/app/components/view-usuarios/view-usuarios.component.html
@@ -1,7 +1,7 @@
 <app-navbar [titulo]="titulo"></app-navbar>
 
 <div class="jugadorDiv">
-    <div class="alert alert-dismissible alert-warning fade show" role="alert" *ngIf="deleteMessage">
+    <div class="alert alert-dismissible alert-warning fade show mt-2" role="alert" *ngIf="deleteMessage">
         {{ deleteMessage}}
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
