--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                         <a class="nav-link active" aria-current="page" routerLink="/ver-misiones">Misiones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" routerLink="/ver-recompensas">Recompensas</a>
                     </li>
                 </ul>
             </div>
