--- a/web/src/app/components/form-inventario/form-inventario.component.html
+++ b/web/src/app/components/form-inventario/form-inventario.component.html
@@ -2,20 +2,24 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="form-container">
-          <form (submit)="guardarInventario()">
-            <div class="form-group">
-              <label for="user_id">ID de Usuario</label>
-              <input type="number" class="form-control" id="user_id" name="user_id" >
-            </div>
+          <form (submit)="EditarInventario()">
+           
   
             <div class="form-group">
-              <label for="armas_id">ID de Arma</label>
-              <input type="number" class="form-control" id="armas_id" name="armas_id" >
+              <label for="armas_id">Arma</label>
+             <select name="armaSelect" id="" class="form-select" [(ngModel)]="armas_id">
+
+              <option *ngFor="let arma of armas"[value]="arma.id">
+                {{arma.nombre}}
+              </option>
+
+
+             </select>
             </div>
   
             <div class="form-group">
               <label for="heroes_id">ID de Héroe</label>
-              <input type="number" class="form-control" id="heroes_id" name="heroes_id" >
+              <input type="number" class="form-control" id="heroes_id" name="heroes_id" [(ngModel)]="heroes_id" >
             </div>
   
             <button type="submit" class="btn btn-primary">Guardar</button>
