--- a/web/src/app/components/view-armas/view-armas.component.css
+++ b/web/src/app/components/view-armas/view-armas.component.css
@@ -12,6 +12,8 @@
     border-radius: 15px;
     background-color: #343a64;
     color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .nombre {
