--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" routerLink="/ver-recompensas">Recompensas</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" routerLink="/ver-armas">Armas</a>
+                    </li>
                 </ul>
             </div>
         </div>
