--- a/web/src/app/components/view-armas/view-armas.component.html
+++ b/web/src/app/components/view-armas/view-armas.component.html
@@ -2,7 +2,10 @@
 
 
 <div class="jugadorDiv">
-    
+    <div class="alert alert-success fade show alert-dismissible" role="alert" *ngIf="editInventario">
+        {{ editInventario }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <div class="contenedorBoton">
         <button class="btn btn-success btn-block mb-3 mt-2" *ngIf="user.data.role_id == 1" routerLink="/form-armas">Crear armas</button>
     </div>
@@ -22,7 +25,7 @@
                 
             </button>
             
-            <button class="btn btn-success" *ngIf="user.data.role_id == 2">
+            <button class="btn btn-success" *ngIf="user.data.role_id == 2" (click)="addWeapon(arma.id)">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30" height="30"><path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/></svg>
             </button>
         </div>
