--- a/web/src/app/components/form-armas/form-armas.component.html
+++ b/web/src/app/components/form-armas/form-armas.component.html
@@ -6,7 +6,7 @@
   <title>Formulario de armas</title>
 </head>
 <body>
-  <app-navbar></app-navbar>
+  <app-navbar [titulo]="titulo"></app-navbar>
   <div class="container mt-3">
     <div class="alert alert-success  fade show mt-2" role="alert" *ngIf="updateMessage" >
       {{ updateMessage }} <br>
