--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
                         <a class="nav-link active" aria-current="page" routerLink="/dashboard">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" routerLink="/inventario" *ngIf="user.data.role_id != 3">Inventario</a>
+                        <a class="nav-link active" aria-current="page" routerLink="/ver-inventario" *ngIf="user.data.role_id != 3">Inventario</a>
                     </li>
                     <li class="nav-item" *ngIf="user.data.role_id == 1">
                         <a class="nav-link active" aria-current="page" routerLink="/ver-jugadores">Usuarios</a>
@@ -37,6 +37,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" routerLink="/ver-armas">Armas</a>
+                    </li>
+                    <li class="nav-item" *ngIf="user.data.role_id == 1">
+                        <a class="nav-link active" aria-current="page" routerLink="/ver-logs">Logs</a>
                     </li>
                 </ul>
             </div>
