--- a/web/src/app/components/view-misiones/view-misiones.component.html
+++ b/web/src/app/components/view-misiones/view-misiones.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar [titulo]="'Misiones'"></app-navbar>
 <div class="jugadorDiv">
     
     <div class="contenedorBoton">
