--- a/web/src/app/components/view-clanes/view-clanes.component.html
+++ b/web/src/app/components/view-clanes/view-clanes.component.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <app-navbar [titulo]="'Clanes'"></app-navbar>
-
+    <table></table>
     <div class="jugadorDiv">
         <!-- <div class="alert alert-success fade show alert-dismissible" role="alert" *ngIf="editInventario">
             {{ editInventario }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div> -->
         <div class="contenedorBoton">
-            <button class="btn btn-success btn-block mb-3 mt-2"  routerLink="/form-clanes">Crear armas</button>
+            <button class="btn btn-success btn-block mb-3 mt-2"  routerLink="/form-clanes">Crear clanes</button>
         </div>
         <div class="contenedor" >
             <br>
