animacion de carga en login y codigo

--- a/web/src/app/components/login/login.component.css
+++ b/web/src/app/components/login/login.component.css
@@ -41,3 +41,24 @@
     background-image: linear-gradient(to right, #e5f0b8, #ddb1ff, #e25bff);
     width: 100%;
 }
+ /* Agrega tus estilos CSS aquí */
+ .loading {
+    pointer-events: none; /* Evita que se puedan hacer clics en los elementos */
+}
+
+.disabled {
+    opacity: 0.5; /* Estilo opaco para los elementos */
+}
+
+.login {
+    position: relative;
+}
+
+.loading-spinner {
+    /* Estilos para el spinner */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999; /* Asegúrate de que esté por encima de todos los demás elementos */
+}
