--- a/web/src/app/components/verficar-login/verficar-login.component.css
+++ b/web/src/app/components/verficar-login/verficar-login.component.css
@@ -51,3 +51,23 @@ body {
 h1{
     text-align: center;
 }
+.loading {
+    pointer-events: none; /* Evita que se puedan hacer clics en los elementos */
+}
+
+.disabled {
+    opacity: 0.5; /* Estilo opaco para los elementos */
+}
+
+.super-contenedor {
+    position: relative;
+}
+
+.loading-spinner {
+    /* Estilos para el spinner */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999; /* Asegúrate de que esté por encima de todos los demás elementos */
+}
