--- a/web/src/app/components/form-clanes/form-clanes.component.html
+++ b/web/src/app/components/form-clanes/form-clanes.component.html
@@ -1,32 +1,43 @@
-<div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="form-container">
-          <form (submit)="guardarClan()">
-            <div class="form-group">
-              <label for="lider">Líder</label>
-              <input type="number" class="form-control" id="lider" name="lider" >
-            </div>
-  
-            <div class="form-group">
-              <label for="nombre">Nombre</label>
-              <input type="text" class="form-control" id="nombre" name="nombre"  required>
-            </div>
-  
-            <div class="form-group">
-              <label for="nivel_clan">Nivel del clan</label>
-              <input type="number" class="form-control" id="nivel_clan" name="nivel_clan"  required>
-            </div>
-  
-            <div class="form-group">
-              <label for="activate">Activado</label>
-              <input type="checkbox" class="form-check-input" id="activate" name="activate">
-            </div>
-  
-            <button type="submit" class="btn btn-primary">Guardar</button>
-          </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <app-navbar [titulo]="'Crear clan'"></app-navbar>
+  <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="form-container">
+            <form (submit)="guardarClan()">
+              <div class="form-group">
+                <label for="lider">Líder</label>
+                <input type="number" class="form-control" id="lider" name="lider" >
+              </div>
+    
+              <div class="form-group">
+                <label for="nombre">Nombre</label>
+                <input type="text" class="form-control" id="nombre" name="nombre"  required>
+              </div>
+    
+              <div class="form-group">
+                <label for="nivel_clan">Nivel del clan</label>
+                <input type="number" class="form-control" id="nivel_clan" name="nivel_clan"  required>
+              </div>
+    
+              <div class="form-group">
+                <label for="activate">Activado</label>
+                <input type="checkbox" class="form-check-input" id="activate" name="activate">
+              </div>
+    
+              <button type="submit" class="btn btn-primary">Guardar</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+</body>
+</html>
   
