view heroes jala

--- a/web/src/app/components/navbar/navbar.component.html
+++ b/web/src/app/components/navbar/navbar.component.html
@@ -41,6 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" routerLink="/ver-recompensas">Recompensas</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" routerLink="/ver-heroes">Heroes</a>
+                    </li>
                     <li class="nav-item" *ngIf="user.data.role_id == 1">
                         <a class="nav-link active" aria-current="page" routerLink="/ver-logs">Logs</a>
                     </li>
